Added swagger documentation for BookImageController@update
